--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <div class="w-col w-col-4">
         <div class="w-form">
           <form id="email-form" name="email-form" data-name="Email Form">
-            <h1>綠卡保庇</h1>
-            <center><h3>輸入您的資料，擲杯問神明 <br/> 看看綠卡啥時下來 XD</h3></center>
+            <h1>綠卡擲杯</h1>
+            <center><h3>擲杯問神明，看看你綠卡啥時下來 XD</h3></center>
             <input class="w-input" id="name" type="text" placeholder="姓名" name="name" data-name="Name">
             <input class="w-input" id="email" type="email" placeholder="Email 地址" name="email" data-name="Email" required="required">
             <select class="w-input" id="current_status">
