--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
   <script type="text/javascript" src="js/modernizr.js"></script>
   <link rel="shortcut icon" type="image/x-icon" href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico">
   <link rel="apple-touch-icon" href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png">
+  <script type="text/javascript" src="js/angular.min.js"></script>
+  <script type="text/javascript" src="js/angular-animate.min.js"></script>
+  <script type="text/javascript" src="js/angular-sanitize.min.js"></script>
 </head>
-<body>
-  <div class="w-section first-section">
+<body data-ng-app="hackathon">
+  <div class="w-section first-section" ng-controller="hackathonCtrl as ctrl">
     <div class="w-row">
       <div class="w-col w-col-4"></div>
       <div class="w-col w-col-4">
@@ -30,26 +33,26 @@
               <option value="placeholder" disabled='disabled' selected='selected'>現在身份</option>
               <option value="F1">學生（F1 - 學生簽）</option>
               <option value="L1">專業人士（L1 - 公司內調簽）</option>
-              <option value="L1">專業人士配偶（L2 - 公司內調配偶簽）</option>
+              <option value="L2">專業人士配偶（L2 - 公司內調配偶簽）</option>
               <option value="OPT">畢業後實習（OPT - 畢業後實習簽）</option>
               <option value="H1B">工作簽（H1B - 工作簽）</option>
               <option value="E">想來創業（E1/E2 - 創業簽）</option>
-              <option value="E">想來投資（投資簽）</option>
+              <option value="I">想來投資（投資簽）</option>
             </select>
-            <select class="w-input" id="education">
+            <select class="w-input" id="education" ng-model="ctrl.user.education">
               <option value="placeholder" disabled='disabled' selected='selected'>學歷</option>
               <option value="high_school">高中/職與以下</option>
               <option value="college">大專</option>
               <option value="master">碩士</option>
               <option value="phd">博士或以上</option>
             </select>
-            <select class="w-input" id="experience">
+            <select class="w-input" id="experience" ng-model="ctrl.user.experience">
               <option value="placeholder" disabled='disabled' selected='selected'>工作經驗</option>
-              <option value="5">五年以下</option>
-              <option value="5+">五年以上</option>
+              <option value="under_5">五年以下</option>
+              <option value="over_5">五年以上</option>
               <option value="management">管理階層</option>
             </select>
-            <select class="w-input" id="nationality">
+            <select class="w-input" id="nationality" ng-model="ctrl.user.nationality">
               <option value="placeholder" disabled='disabled' selected='selected'>國籍</option>
               <option value="taiwan">台灣</option>
               <option value="china">中國</option>
@@ -58,7 +61,7 @@
               <option value="mexico">墨西哥</option>
               <option value="others">其他</option>
             </select>
-            <input class="w-button submit-button" type="submit" value="送出" data-wait="Please wait...">
+            <input class="w-button submit-button" type="submit" value="送出" data-wait="Please wait..." ng-disabled="ctrl.isSubmitting" ng-click="ctrl.submit()">
           </form>
           <div class="w-form-done">
             <p>Thank you! Your submission has been received!</p>
@@ -94,5 +97,6 @@
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/webflow.js"></script>
   <!--[if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
+  <script type="text/javascript" src="js/hackathon.js"></script>
 </body>
 </html>
