--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           <form id="email-form" name="email-form" data-name="Email Form">
             <h1>綠卡擲杯</h1>
             <center><h3>擲杯問神明，看看你綠卡啥時下來 XD</h3></center>
-            <input class="w-input" id="name" type="text" placeholder="姓名" name="name" data-name="Name">
-            <input class="w-input" id="email" type="email" placeholder="Email 地址" name="email" data-name="Email" required="required">
-            <select class="w-input" id="current_status">
-              <option value="placeholder" disabled='disabled' selected='selected'>現在身份</option>
+            <input class="w-input" id="name" type="text" placeholder="姓名" name="name" data-name="Name" ng-model="ctrl.user.name">
+            <input class="w-input" id="email" type="email" placeholder="Email 地址" name="email" data-name="Email" required="required" ng-model="ctrl.user.email">
+            <select class="w-input" id="current_status" ng-model="ctrl.user.status">
+              <option value="" disabled='disabled' selected='selected'>現在身份</option>
               <option value="F1">學生（F1 - 學生簽）</option>
               <option value="L1">專業人士（L1 - 公司內調簽）</option>
               <option value="L2">專業人士配偶（L2 - 公司內調配偶簽）</option>
@@ -40,20 +40,20 @@
               <option value="I">想來投資（投資簽）</option>
             </select>
             <select class="w-input" id="education" ng-model="ctrl.user.education">
-              <option value="placeholder" disabled='disabled' selected='selected'>學歷</option>
+              <option value="" disabled='disabled' selected='selected'>學歷</option>
               <option value="high_school">高中/職與以下</option>
               <option value="college">大專</option>
               <option value="master">碩士</option>
               <option value="phd">博士或以上</option>
             </select>
             <select class="w-input" id="experience" ng-model="ctrl.user.experience">
-              <option value="placeholder" disabled='disabled' selected='selected'>工作經驗</option>
+              <option value="" disabled='disabled' selected='selected'>工作經驗</option>
               <option value="under_5">五年以下</option>
               <option value="over_5">五年以上</option>
               <option value="management">管理階層</option>
             </select>
             <select class="w-input" id="nationality" ng-model="ctrl.user.nationality">
-              <option value="placeholder" disabled='disabled' selected='selected'>國籍</option>
+              <option value="" disabled='disabled' selected='selected'>國籍</option>
               <option value="taiwan">台灣</option>
               <option value="china">中國</option>
               <option value="india">印度</option>
