change jquery to loacl path

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   </ul>
 
 
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/jquery.min.js"></script>
   <!--[if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
   <script type="text/javascript">
         var submitBtn = $("#submitBtn"),
@@ -114,7 +114,8 @@
                     var aniArr = ['head1', 'head2', 'head3', 'head4', 'tail1', 'tail2', 'tail3', 'tail4'],
                         className = aniArr[Math.floor(Math.random() * aniArr.length)];
 
-                    className = ($(elm).hasClass('mirror')) ? className + '-mirror' : className;
+                    className = ($(elm).hasClass('mirror')) ? className + '-mirror mirror bay' : className + ' bay';
+                    $(elm).removeClass();
                     $(elm).addClass(className);
                 }); 
             }
