--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           <form id="email-form" name="email-form" data-name="Email Form">
             <h1>綠卡擲杯</h1>
             <center><h3>擲杯問神明，看看你辦綠卡要多久，要經過哪些步驟 XD</h3></center>
-            <select class="w-input" id="current_status">
-              <option value="placeholder" disabled='disabled' selected='selected'>現在身份</option>
+            <select class="w-input" id="current_status" ng-model="ctrl.user.status">
+              <option value="" disabled='disabled' selected='selected'>現在身份</option>
               <option value="F1">學生（F1 - 學生簽）</option>
               <option value="L1">專業人士（L1 - 公司內調簽）</option>
               <option value="L2">專業人士配偶（L2 - 公司內調配偶簽）</option>
