--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <form id="email-form" name="email-form" data-name="Email Form" ng-submit="ctrl.submit()">
             <h1>綠卡擲杯</h1>
             <center><h3>擲杯問神明，看看你辦綠卡要多久，要經過哪些步驟 XD</h3></center>
-            <select class="w-input" id="current_status" ng-model="ctrl.user.status">
+            <select class="w-input" id="current_status" ng-model="ctrl.user.status" ng-disabled="ctrl.isSubmitting" required>
               <option value="" disabled='disabled' selected='selected'>現在身份</option>
               <option value="F1">學生（F1 - 學生簽）</option>
               <option value="L1">專業人士（L1 - 公司內調簽）</option>
@@ -38,20 +38,20 @@
               <option value="E">想來創業（E1/E2 - 創業簽）</option>
               <option value="I">想來投資（投資簽）</option>
             </select>
-            <select class="w-input" id="education" ng-model="ctrl.user.education">
+            <select class="w-input" id="education" ng-model="ctrl.user.education" ng-disabled="ctrl.isSubmitting" required>
               <option value="" disabled='disabled' selected='selected'>學歷</option>
               <option value="high_school">高中/職與以下</option>
               <option value="college">大專</option>
               <option value="master">碩士</option>
               <option value="phd">博士或以上</option>
             </select>
-            <select class="w-input" id="experience" ng-model="ctrl.user.experience">
+            <select class="w-input" id="experience" ng-model="ctrl.user.experience" ng-disabled="ctrl.isSubmitting" required>
               <option value="" disabled='disabled' selected='selected'>工作經驗</option>
               <option value="under_5">五年以下</option>
               <option value="over_5">五年以上</option>
               <option value="management">管理階層</option>
             </select>
-            <select class="w-input" id="nationality" ng-model="ctrl.user.nationality">
+            <select class="w-input" id="nationality" ng-model="ctrl.user.nationality" ng-disabled="ctrl.isSubmitting" required>
               <option value="" disabled='disabled' selected='selected'>國籍</option>
               <option value="taiwan">台灣</option>
               <option value="china">中國</option>
@@ -61,9 +61,9 @@
               <option value="others">其他</option>
             </select>
             <input class="w-button submit-button" type="submit" value="擲杯" ng-disabled="ctrl.isSubmitting">
-            <div id="brabayContainer">
-                <p class="bay" ng-class="ctrl.css"></p>
-                <p class="bay mirror" ng-class="ctrl.cssMirror"></p>
+            <div id="brabayContainer" ng-show="ctrl.hasSubmitted">
+                <p class="bay" hackathon-animate animate-class-postfix=""></p>
+                <p class="bay mirror" hackathon-animate animate-class-postfix="-mirror"></p>
             </div>
           </form>
           <div class="w-form-done">
@@ -78,11 +78,10 @@
     </div>
   </div>
 
-  <ul class="timeline"  data-ng-if="ctrl.timelineData.length > 0">
-
+  <ul class="timeline" id="timeline" ng-if="ctrl.animated">
     <!-- Item 1 -->
     <li ng-repeat="timeline in ctrl.timelineData">
-      <div class="direction-r">
+      <div ng-class="{'direction-l': $odd, 'direction-r': $even}">
         <div class="flag-wrapper">
           <span class="flag">{{timeline.title}}</span>
           <span class="time-wrapper"><span class="time">{{timeline.processing_time}}</span></span>
